welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:13: error: value setCouleurBrosse is not a member of Unit
	faireFleur(Color.ORANGE);avance()setCouleurBrosse(Color.YELLOW);droite();avance(2);
                                         ^FlowerPot:14: error: too many arguments for method droite: ()Unit
	droite();avance(2);droite(2);
                                 ^